<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sip2PeerChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="addressLabel">Address</string>
    <string name="portLabel">Port</string>
    <string name="addContactButton">Add contact</string>
    <string name="sendMessage">Send</string>
    <string name="emptyText">EMPTY TEXT</string>
    <string name="startPeer">Start peer</string>
    <string name="connectToPeer">Conect</string>
    <string name="name">Id</string>
    <string name="localPort">Local port</string>
    <string name="connectToRingOption">Connect to ring</string>

</resources>