<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectActivity" >

    <TextView
        android:id="@+id/idLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/localNameEdit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/idLabel"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <TextView
        android:id="@+id/localPortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/localNameEdit"
        android:layout_marginTop="40dp"
        android:text="@string/localPort" />

    <EditText
        android:id="@+id/localPortEdit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/localPortLabel"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:ems="10" />

    <TextView
        android:id="@+id/connectToRingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/localPortLabel"
        android:layout_marginTop="40dp"
        android:text="@string/connectToRingOption" />

    <ToggleButton
        android:id="@+id/connectToRingToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/connectToRingLabel"
        android:layout_alignParentRight="true"
        android:text="@string/connectToRingOption" />

    <TextView
        android:id="@+id/remoteAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/connectToRingLabel"
        android:layout_marginTop="40dip"
        android:text="@string/addressLabel" />
    
    <EditText
        android:id="@+id/addressEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/remoteAddressLabel"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text" />
        
	<TextView
        android:id="@+id/remotePortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remoteAddressLabel"
        android:layout_marginTop="40dp"
        android:layout_alignParentLeft="true"
        android:text="@string/portLabel" />
    
    <EditText
        android:id="@+id/remotePortEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/remotePortLabel"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number">

    </EditText>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/startPeer" />
    
</RelativeLayout>